--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 // EventBus Apt 索引类生成位置
-                arguments = [ eventBusIndex : applicationId + '.MyEventBusIndex' ]
+                arguments = [eventBusIndex: applicationId + '.MyEventBusIndex']
             }
         }
     }
@@ -163,6 +163,8 @@ dependencies {
 
     // ButterKnife 注解库：https://github.com/JakeWharton/butterknife
     implementation 'com.jakewharton:butterknife:10.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // EventBus 事件总线：https://github.com/greenrobot/EventBus
@@ -197,6 +199,12 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
+    //增加recycle和对应的适配器
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    //增加下拉刷新SmartRefreshLayout的依赖
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'//没有使用特殊Header，可以不加这行
     // 网络请求（待发布）：https://github.com/getActivity/EasyHttp
 
     // 国际化：https://github.com/getActivity/MultiLanguages
