--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="n">
-        <activity android:name=".ui.activity.RecyclerViewActivity"></activity>
-        <!-- 适配Android 7.0文件意图 -->
+        <activity android:name=".ui.activity.ViewPageActivity"></activity>
+        <activity android:name=".ui.activity.RecyclerViewActivity" /> <!-- 适配Android 7.0文件意图 -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
