--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         // 无痛修改包名：https://www.jianshu.com/p/17327e191d2e
         applicationId "com.ljy.demo"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion rootProject.ext.targetVersion
         versionCode 10
         versionName "1.0"
@@ -199,6 +199,12 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.0'
+    //可以适配多个侧滑菜单控件
+    implementation 'com.github.WangcWj:WeSwipe:1.0.1'
+    // 网络框架
+    implementation 'com.lzy.net:okgo:3.0.4'
     //增加recycle和对应的适配器
     implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
