--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="n">
-        <activity android:name=".ui.activity.SlideMoreRecyclerViewActivity"></activity>
+        <activity android:name=".ui.activity.UpLoadImageActivity"></activity>
+        <activity android:name=".ui.activity.SlideMoreRecyclerViewActivity" />
         <activity android:name=".ui.activity.SlideRecyclerViewActivity" />
         <activity android:name=".ui.activity.ListViewActivity" />
         <activity android:name=".ui.activity.ViewPageActivity" />
